force-app/main/default/objects/Goals__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <formula>Total_Steps_Completed__c /  Total_Steps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>