force-app/main/default/objects/Goals__c/fields/Expected_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Expected_Outcomes__c</fullName>
    <inlineHelpText>Right expected outcomes of this goal.</inlineHelpText>
    <label>Expected Outcomes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>