force-app/main/default/objects/Goals__c/fields/Extra_Time_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Extra_Time_Delayed__c</fullName>
    <defaultValue>&quot;0 DAYS 0 HOURS 0 MINS&quot;</defaultValue>
    <label>Extra Time Delayed</label>
    <length>60</length>
    <type>Text</type>
</CustomField>