force-app/main/default/objects/Goals__c/fields/Final_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Final_Outcomes__c</fullName>
    <label>Final Outcomes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>