force-app/main/default/objects/Goals__c/fields/Parent_Goal__c.field-meta.xml
<CustomField>
    <fullName>Parent_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Goal</label>
    <referenceTo>Goals__c</referenceTo>
    <relationshipLabel>Related Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>