force-app/main/default/objects/Goals__c/fields/Steps_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Steps_Remaining__c</fullName>
    <label>Steps Remaining</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>