force-app/main/default/objects/Goals__c/fields/Total_Steps_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Steps_Completed__c</fullName>
    <formula>Total_Steps__c -  Steps_Remaining__c</formula>
    <label>Total Steps Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>