force-app/main/default/objects/Goals__c/validationRules/GoalMgm_Exp_Start_Dt_Gr_Exp_End_Dt.validationRule-meta.xml
<ValidationRule>
    <fullName>GoalMgm_Exp_Start_Dt_Gr_Exp_End_Dt</fullName>
    <active>true</active>
    <description>Expected End Date on goal cannot be less than Expected Start Date.</description>
    <errorConditionFormula>IF ( Expected_Start_Date__c &gt; Expected_End_Date__c , true, false)</errorConditionFormula>
    <errorMessage>Expected start date cannot be greater than Expected end date.</errorMessage>
</ValidationRule>